force-app/main/default/objects/Vehicle__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFRICA</fullName>
                <default>true</default>
                <label>AFRICA</label>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>MEXICO</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>