force-app/main/default/objects/Vehicle__c/fields/IsOpen__c.field-meta.xml
<CustomField>
    <fullName>IsOpen__c</fullName>
    <label>IsOpen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
                <default>true</default>
                <label>True</label>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>