force-app/main/default/objects/Vehicle__c/fields/Models_Count__c.field-meta.xml
<CustomField>
    <fullName>Models_Count__c</fullName>
    <label>Models Count</label>
    <summaryForeignKey>Model__c.Vehicle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>