force-app/main/default/objects/Vehicle__c/validationRules/Country_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>((ISPICKVAL( Country__c , &apos;INDIA&apos;)) &amp;&amp;  (ISNULL(Phone__c ) ||   ISBLANK(Phone__c )) &amp;&amp; ( $Profile.Name  &lt;&gt; &apos;System Administrator&apos;))</errorConditionFormula>
    <errorMessage>Phone number is  Required</errorMessage>
</ValidationRule>